Ship Icons, Flexbox
Added a folder containing ship icons
Worked with flexbox to make a farming table
and added the table to phases 0 to 2

[Ticket: X]

--- a/index.html
+++ b/index.html
@@ -39,23 +39,59 @@
             No Need to Farm to 7 stars for Ahsoka Tano and Jedi Knight Anakin. Farm enough to Advance to Next Phase.
         </p>
 
-        <h3>Normal Energy Battles</h3>
-        <ul>
-            <li><img class="chicon" width="25px" src="img/character-icons/obiwanep4.png">Old Ben</li>
-            <li>Ahsoka Tano</li>
-            <li>Jedi Knight Anakin</li>
-        </ul>
+        <div class="container">
+            <div class="type">Battles
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/energy.png" alt="Normal Energy">Light/Dark Side
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/obi-wan-kenobi-old-ben/">
+                            <img src="img/character-icons/obiwanep4.png" alt="Old Ben">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/ahsoka-tano/">
+                            <img src="img/character-icons/ahsoka.png" alt="Ahsoka Tano">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/jedi-knight-anakin/">
+                            <img src="img/character-icons/anakinknight.png" alt=" Jedi Knight Anakin">
+                        </a>
+                    </div>
+                </div>
+  
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/cantina_energy.png" alt="Cantina Energy">Cantina
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/obi-wan-kenobi-old-ben/">
+                            <img src="img/character-icons/obiwanep4.png" alt="Old Ben">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/luke-skywalker-farmboy/"><img src="img/character-icons/luke_ep4.png" alt="Farmboy Luke">
+                        </a>    
+                    </div>
+                </div>
+            </div>
+            <div class="type">Shipments
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/cantina_battles_tokens.png" alt="Cantina Battle Tokens">Cantina Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/stormtrooper-han/">
+                            <img src="img/character-icons/trooperstorm_han.png" alt="Stormtrooper Han">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-        <h3>Cantina Battles</h3>
-        <ul>
-            <li>Old Ben</li>
-            <li>Farmboy Luke</li>
-        </ul>
 
-        <h3>Cantina Shop</h3>
-        <ul>
-            <li>Stormtrooper Han</li>
-        </ul>
 
         <h2>Phase 1</h2>
         <p>In this phase you will be looking to join a guild and enter Squad Arena, while beginning farming requirements for your first Journey Guide characters:
@@ -75,31 +111,90 @@
             </ol>
             Your main focus here is to advance your light side squad to battle 4-C for General Veers. Farm him just as needed here until you get to light side 6-C. Your secondary focus is to advance your dark side squad to 3-A for Range Trooper.
         </p>
-        <h3>Normal Battles</h3>
-        <ul>
-            <li>Dark Trooper</li>
-            <li>Moff Gideon</li>
-            <li>Range Trooper</li>
-            <li>General Veers</li>
-        </ul>
-        <h3>Cantina Battles</h3>
-        <ul>
-            <li>Boba Fett</li>
-            <li>Geonosion Soldier</li>
-        </ul>
-        <h3>Cantina Shop</h3>
-        <ul>
-            <li>Stormtrooper Han</li>            
-        </ul>
-        <h3>Squad Arena Shop</h3>
-        <ul>
-            <li>Princess Leia</li>
-            <li>Grand Moff Tarkin</li>
-        </ul>
-        <h3>Guild Store</h3>
-        <ul>
-            <li>Sun Fac</li>
-        </ul>
+        <div class="container">
+            <div class="type">Battles
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/energy.png" alt="Normal Energy">Light/Dark Side
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/dark-trooper/">
+                            <img src="img/character-icons/darktrooper.png" alt="Darktrooper">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/moff-gideon/">
+                            <img src="img/character-icons/moffgideon.png" alt="Moff Gideon">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/range-trooper/">
+                            <img src="img/character-icons/trooperranger.png" alt="Range Trooper">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/general-veers/">
+                            <img src="img/character-icons/veers.png" alt="General Veers">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/cantina_energy.png" alt="Cantina Energy">Cantina
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/boba-fett/">
+                            <img src="img/character-icons/bobafett.png" alt="Boba Fett">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/geonosian-soldier/">
+                            <img src="img/character-icons/geonosian_soldier.png" alt="Geonosian Soldier">
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="type">Shipments
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/cantina_battles_tokens.png" alt="Cantina Battle Tokens">Cantina Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/stormtrooper-han/">
+                            <img src="img/character-icons/trooperstorm_han.png" alt="Stormtrooper Han">
+                        </a>
+                    </div>
+                </div>
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/guild_tokens.png" alt="Guild Tokens"> Guild Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/sun-fac/">
+                            <img src="img/character-icons/geonosian_sunfac.png" alt="Sun Fac">
+                        </a>
+                    </div>
+                </div>
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/squad_arena_token.png" alt="Squad Arena Token">Squad Arena Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/princess-leia/">
+                            <img src="img/character-icons/leia_princess.png" alt="Princess Leia">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/grand-moff-tarkin/">
+                            <img src="img/character-icons/tarkinadmiral.png" alt="Grand Moff Tarkin">
+                        </a>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
 
         <h2>Phase 2</h2>
         <p>Phase 2 consists of advancing levels while farming characters to complete a few very helpful events and beginning to farm for your fleet squad:
@@ -110,32 +205,106 @@
             </ol>
             Gear characters as needed to complete events and battles. Your goal is to complete events and continue to gear your Commander Luke Skywalker and Emperor Palpatine requirements.
         </p>
-        <h3>Normal Battles</h3>
-        <ul>
-            <li>Greef Karga</li>
-            <li>The Mandalorian</li>
-            <li>Vulture Droid</li>
-            <li>Tie Bomber</li>
-        </ul>
-        <h3>Cantina Battles</h3>
-        <ul>
-            <li>Geonosion Soldier</li>
-            <li>Geonosion Spy</li>
-            <li>Tie Fighter Pilot</li>
-        </ul>
-        <h3>Cantina Shop</h3>
-        <ul>
-            <li>Boba Fett</li>
-            <li>Ahsoka Tano</li>
-        </ul>
-        <h3>Squad Arena Shop</h3>
-        <ul>
-            <li>IG-88</li>
-        </ul>
-        <h3>Guild Store</h3>
-        <ul>
-            <li>Sun Fac</li>
-        </ul>
+        
+        <div class="container">
+            <div class="type">Battles
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/energy.png" alt="Normal Energy">Light/Dark Side
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/boba-fett/">
+                            <img src="img/character-icons/bobafett.png" alt="Boba Fett">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/greef-karga/">
+                            <img src="img/character-icons/greefkarga.png" alt="Greef Karga">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/the-mandalorian/">
+                            <img src="img/character-icons/mandalorian.png" alt="The Mandalorian">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/ships/vulture-droid/">
+                            <img src="img/ship-icons/vulture_droid.png" alt="Vulture Droid">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/ships/imperial-tie-bomber/">
+                            <img src="img/ship-icons/imperial_tie_bomber.png" alt="Imperial Tie Bomber">
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="farmbox">
+                   <div class="loc">
+                        <img src="img/game-icons/cantina_energy.png" alt="Cantina Energy">Cantina
+                   </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/geonosian-soldier/">
+                            <img src="img/character-icons/geonosian_soldier.png" alt="Geonosian Soldier">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/geonosian-spy/">
+                            <img src="img/character-icons/geonosian_spy.png" alt="Geonosian Spy">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/tie-fighter-pilot/">
+                            <img src="img/character-icons/tiepilot.png" alt="Tie Fighter Pilot">
+                        </a>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+            <div class="type">Shipments
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/cantina_battles_tokens.png">Cantina Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/boba-fett/">
+                            <img src="img/character-icons/bobafett.png" alt="Boba Fett">
+                        </a>
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/ahsoka-tano/">
+                            <img src="img/character-icons/ahsoka.png" alt="Ahsoka Tano">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/guild_tokens.png" alt="Guild Tokens">Guild Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/sun-fac/">
+                            <img src="img/character-icons/geonosian_sunfac.png" alt="Sun Fac">
+                        </a>
+                    </div>
+                </div>
+                <div class="farmbox">
+                    <div class="loc">
+                        <img src="img/game-icons/squad_arena_token.png" alt="Squad Arena Token">Squad Arena Store
+                    </div>
+                    <div class="toon">
+                        <a href="https://swgoh.gg/characters/ig-88/">
+                            <img src="img/character-icons/ig88.png" alt="IG-88">
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
         <h2>Phase 3</h2>
         <p>In Phase 3, you will switch focus to farming and gearing a Jedi team to be able to complete Galactic War every day, while still gearing up your Commander Luke Skywalker and Emperor Palpatine requirements:
